Fix alignment of Navigation title in footer

--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -166,7 +166,7 @@
 
 /* Widget Footer Navigation */
 .widget-nav {
-  text-align: right;
+  // text-align: right;
 
   .footer__nav-list {
     line-height: 1;
